products/multisig/cd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multisig
  namespace: multisig
  labels:
    "app.kubernetes.io/name": "multisig"
spec:
  replicas: 1
  selector:
    matchLabels:
      "app.kubernetes.io/name": "multisig"
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        "app.kubernetes.io/name": "multisig"
    spec:
      containers:
        - image: multisig
          name: multisig
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 200Mi
            requests:
              memory: 100Mi
