products/multisig/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: multisig
  namespace: multisig
  labels:
    "app.kubernetes.io/name": "multisig"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    "app.kubernetes.io/name": "multisig"
