products/multisig/cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multisig
  namespace: multisig
  labels:
    "app.kubernetes.io/name": "multisig"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: multisig
                port:
                  number: 80
